# CPP

SOLID/Single Responsibility Principle/: CMakeLists.txt  main.cpp  readme.md
